mobile scroll fix 2

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,8 @@ V. CONTENT WELL
 @media (max-width: 900px) {
   .bg-image {
     background-attachment: scroll;
+    overflow: hidden;
+  }
   }
 }
 
